--- a/pennieispunk.html
+++ b/pennieispunk.html
@@ -18,19 +18,28 @@
 <body>
     <main>
            <article>
+               
+    <div>
         <h1>Pennie is Punk</h1>
          <img src="../exercise1/photos/cover.jpg" alt="Pennie holding a flame." width="300" height="400">
-               <p><em>Pennie is Punk</em> is a photo magazine about wearing denim in a punk way throughout all hours and during partaking in various activitie throughout the day. Pennie is a model an artist in New York City. All photos were taken in Union Square, Manhattan.
+            <p><em>Pennie is Punk</em> is a photo magazine about wearing denim in a punk way throughout all hours and during partaking in various activitie throughout the day. Pennie is a model an artist in New York City. All photos were taken in Union Square, Manhattan.
             </p>
+    </div>
+               
+    <div>
         <h2>Life Begins</h2>
-         <img src="../exercise1/photos/lifebegins.jpg" alt="Pennie's Reflection." width="600" height="400">
-               <p> This project involved discovering creative ways to wear denim. So for the first photo, I cut scrap of denim from a pair of old jeans to make a choker which emphasizes the material's versatility.
-            </p>
+        <img src="../exercise1/photos/life_begins.jpg" alt="Pennie's Reflection." width="600" height="400">
+        <p> This project involved discovering creative ways to wear denim. So for the first photo, I cut scrap of denim from a pair of old jeans to make a choker which emphasizes the material's versatility.
+        </p>
+    </div>
+   
+    <div>
         <h3>Welcome to the Jungle</h3>
-         <img src="../exercise1/photos/welcometothejungle.jpg" alt="Pennie Posing." width="620" height="400">
-               <p> The titles for each page are pretty random, and are a result of how the photos feel to me.
-            </p> 
-           </article>
-    </main>
-</body>
+        <img src="../exercise1/photos/welcome_to_the_jungle.jpg" alt="Pennie Posing." width="620" height="400">
+        <p> The titles for each page are pretty random, and are a result of how the photos feel to me.
+        </p> 
+     </div>
+   </article>
+  </main>
+ </body>
 </html>
