--- a/pennieispunk.html
+++ b/pennieispunk.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta chartset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pennie</title>
     </head>
+    <body>
     <header>
   <b>Interactive Web Design 2019</b>
         </header>
@@ -15,7 +16,6 @@
         <li>Pennie</li>
     </ul>
     </nav>
-<body>
     <main>
            <article>
                
