--- a/exercise1/pennieispunk.html
+++ b/exercise1/pennieispunk.html
@@ -23,19 +23,19 @@
                
     <div>
         <h1>Exercise 1: Pennie is Punk</h1>
-         <img src="../photos/cover.jpg" alt="Pennie holding a flame." width="300" height="400">
+         <img src="../exercise1/photos/cover.jpg" alt="Pennie holding a flame." width="300" height="400">
             <p><em>Pennie is Punk</em> is a photo magazine about wearing denim in a punk way throughout all hours and during partaking in various activitie throughout the day. Pennie is a model an artist in New York City. All photos were taken in Union Square, Manhattan.
             </p>
     </div>
                
     <div>
-        <img src="../photos/life_begins.jpg" alt="Pennie's Reflection." width="600" height="400">
+        <img src="../exercise1/photos/life_begins.jpg" alt="Pennie's Reflection." width="600" height="400">
         <p> This project involved discovering creative ways to wear denim. So for the first photo, I cut scrap of denim from a pair of old jeans to make a choker which emphasizes the material's versatility.
         </p>
     </div>
    
     <div>
-        <img src="../photos/welcome_to_the_jungle.jpg" alt="Pennie Posing." width="620" height="400">
+        <img src="../exercise1/photos/welcome_to_the_jungle.jpg" alt="Pennie Posing." width="620" height="400">
         <p> The titles for each page are pretty random, and are a result of how the photos feel to me.
         </p> 
      </div>
