--- a/WebDesign2019/artists/annabel/exercise3.html
+++ b/WebDesign2019/artists/annabel/exercise3.html
@@ -6,3 +6,18 @@
     <link rel="stylesheet" type="text/css" href="exercise3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <body>
+    <header>
+  <b>Annabel Monsky</b>
+        </header>
+<nav>
+    <ul>
+        <li><a href="exercise1.html">Exercises</a></li>
+        <li><a href="../index.html">Exercise 2</a></li>
+        <li>Exercise 3</li>
+        <li><a href="reading1/index.html">Reading Responses</a></li>
+       
+    </ul>
+    </nav>
+    <main>
+           <article>
