latest assignment -- in process but almost done

--- a/WebDesign2019/artists/annabel/reading1/index.html
+++ b/WebDesign2019/artists/annabel/reading1/index.html
@@ -12,7 +12,9 @@
         <nav>
     <ul>
         <li><a href="index.html">Interactive Web Design 2019</a></li>
-        <li><a href="../exercise1.html">Exercises</a></li>
+        <li><a href="../exercise1.html">Exercise 1</a></li>
+        <li><a href="../bio.html">Exercise 2</a></li>
+        <li><a href="../exercise3.html">Exercise 3</a></li>
          <li>Reading Responses</li>
     </ul>
              </nav>
@@ -37,10 +39,11 @@
 <h3>Reading Response 3: "Websites are the Art of Our Times"</h3>
 <p>Interesting Quote: “Most Web Entities are social entities. They get in touch and advertise their existence to each other. Similar to human beings, they will evaluate, criticize, ‘link’ to each other, and ultimately, they develop a ‘taste.’”
 <br>
-This quote inspired me to compare programmers and digital “influencers.” I think many digital “influencers” could also knack coding, because both kinds of work involve some similar ways of thinking. 
-<br>“Influencers” often link their personal products to outside sources and make changes after reviewing data analytics. 
-Successful programmers master linking processes on their websites too.   
-</p>
+This quote prompted me to compare programmers and digital “influencers.” I think many digital “influencers” could also knack coding, because both kinds of work involve some similar ways of thinking. 
+<br>“Influencers” often link their personal products to outside sources and make changes after reviewing data analytics while successful programmers focus on linking processes too.</p>
+<p>I think traditional education fails many students by influencing them to think subjects relating to the computer like programming are entirely separate from "art".
+<br> Truthfully, "art" is what we make of it. Sometimes the most successful artists are those who know hwo to illustrate their ideas by using unconventional mediums like on the web, as well as more predictable ones.
+    </p>
               </div>
             </article>
         </main>
