--- a/artists/annabel/exercise3.html
+++ b/artists/annabel/exercise3.html
@@ -13,7 +13,7 @@
         </header>
 <nav>
     <ul>
-        <li><a href="exercise1.html">Exercises</a></li>
+        <li><a href="exercise1.html">Exercise 1</a></li>
         
         <li><a href="../index.html">Exercise 2</a></li>
         
