--- a/webInteraction_homeworkAssignments/logoLove/logoLove.html
+++ b/webInteraction_homeworkAssignments/logoLove/logoLove.html
@@ -110,7 +110,9 @@ Turn Me White!</button>
 
 </body>
 
- <script src="logoLove.js"></script>  
+ <script src="logoLove.js">
+   
+   </script>
 
 
 </html>
