--- a/WebDesign2019/artists/annabel/reading1/index.html
+++ b/WebDesign2019/artists/annabel/reading1/index.html
@@ -46,7 +46,7 @@ How are programmers similar to digital “influencers"? The quote leads me to po
                    <div class="responseFour">
 <br><header>Response 4: Material Design</header>
 <br>1) When is it better to design icons and typeface by hand versus using computer programs? I think there are pros and cons to both.<br>
-<br> 2) How can I maximize the amount of time I spend designin by sketching by hand and minimizing the amount of energy I expend towards coding on the web? I am asking because I have migraines, so the less time I can spend staring at the computer screen, the better!<br>
+<br> 2) How can I maximize the amount of time I spend designing by sketching by hand and minimizing the amount of energy I expend towards coding on the web? I am asking because I have migraines, so the less time I can spend staring at the computer screen, the better!<br>
 </div>
               </div>
             </article>
