--- a/exercise3.html
+++ b/exercise3.html
@@ -29,7 +29,7 @@
         
     <div id="container">
 
-      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in Manhattan, New York. I went to Bucknell University in rural Pennsylvania before transferring to Parsons School of Design in Manhattan. I am originally from the Upper East Side, but now I live in the Union Square area to be close to school. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. In my free time, I play guitar and sing. Sometimes I write poems and so think it might be cool to pursue side gigs in singing and songwriting after graduating.</p></aside> 
+      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in Manhattan, New York. I attend The Parsons School of Design in Union Square. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. I play guitar, sing, and write poems in my free time. I am considering pursuing side gigs in singing and songwriting after graduating.</p></aside> 
   </div>
          
     </body>
