--- a/exercise3.html
+++ b/exercise3.html
@@ -29,8 +29,7 @@
         
     <div id="container">
 
-      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in Manhattan, New York. I attend The Parsons School of Design in Union Square. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. I play guitar, sing, and write poems in my free time. I am considering pursuing side gigs in singing and songwriting after graduating.
-      </p></aside> 
+      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in Manhattan, New York. I attend The Parsons School of Design in Union Square. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. I play guitar, sing, and write poems in my free time. I am considering pursuing side gigs in singing and songwriting after graduating.</p></aside> 
   </div>
          
     </body>
