--- a/artists/annabel/exercise3.html
+++ b/artists/annabel/exercise3.html
@@ -19,7 +19,7 @@
     <div id="container">
         
 
-      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in New York City. Square. I am originally from the Upper East Side but now live downtown and attend The Parsons School of Design. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. I play guitar, sing, and write poems in my free time, so I am considering pursuing side gigs in singing and songwriting after graduating. .</p></aside> 
+      <aside><p class="body-text">My name is Annabel Monsky, and I am 25 years old. I was born and raised in New York City. Square. I am originally from the Upper East Side but now live downtown and attend The Parsons School of Design. I am earning a degree in Integrated Design (BFA) because the major enables me to explore many interests. I play guitar, sing, and write poems in my free time, so I am considering pursuing side gigs in singing and songwriting after graduating.</p></aside> 
   </div>
          </article>
          </main>    
