--- a/exercise1/pennieispunk.html
+++ b/exercise1/pennieispunk.html
@@ -24,7 +24,7 @@
     <div>
         <h1>Exercise 1: Pennie is Punk</h1>
          <img src="../photos/cover.jpg" alt="Pennie holding a flame." width="300" height="400">
-            <p><em>Pennie is Punk</em> is a photo magazine about wearing denim in a punk way throughout all hours and during partaking in various activitie throughout the day. Pennie is a model an artist in New York City. All photos were taken in Union Square, Manhattan.
+            <p><em>Pennie is Punk</em> is a photo magazine about wearing denim in a punk way throughout all hours and during partaking in various activities throughout the day. Pennie is a model an artist in New York City. All photos were taken in Union Square, Manhattan.
             </p>
     </div>
                
